Guna Removed Comment
Removed Comments

--- a/HappinessMetric/Views/Home/Index.cshtml
+++ b/HappinessMetric/Views/Home/Index.cshtml
@@ -59,16 +59,9 @@
                     </div>
        <div class="clear">
                     </div>
-       @*
-        <input type="button" id="Clear-@viewId"  name="Clear" class="button blue floatRight" style="margin-right:5%;" value="CLEAR">           
-       *@<div><input type="button" value ="SUBMIT" id="btnSubmit" name="submit" class="btn btn-primary" /> <input type="button" value ="CLEAR" id="btnClear" name="Clear" class="btn btn-info" /></div>
+     <div><input type="button" value ="SUBMIT" id="btnSubmit" name="submit" class="btn btn-primary" /> <input type="button" value ="CLEAR" id="btnClear" name="Clear" class="btn btn-info" /></div>
           
-     
-     @*{
-              <h4 style="color: red;">Oops, You are not an authorized user.</h4>
-           }
-       }*@
-                  
+          
 </div>
 
 <script type="text/javascript">
