Home Page And Report Page Commited
Regha Code And My Code Also merged

--- a/HappinessMetric/Content/Site.css
+++ b/HappinessMetric/Content/Site.css
@@ -1,794 +1,192 @@
-﻿html {
-    background-color: #e2e2e2;
-    margin: 0;
-    padding: 0;
+﻿body {
+    color: #777;
 }
 
-body {
-    background-color: #368ee0;
-    color: #333;
-    font-size: .85em;
-    font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
-    margin: 0;
-    padding: 0;
+#myhappiness {
+    background-color: #CCE7F1 !important;
 }
 
-a {
-    color: #333;
-    outline: none;
-    padding-left: 3px;
-    padding-right: 3px;
-    text-decoration: none;
+h3, h4 {
+    margin: 10px 0 30px 0;
+    letter-spacing: 5px;
+    font-size: 20px;
+    color: #FFF;
 }
 
-    a:link, a:visited,
-    a:active, a:hover {
-        color: #efeeef;
+.box-title h3 {
+    color: #0C0C0C;
+}
+
+.container {
+    padding: 80px 27px;
+}
+
+#userreportform,#homehappiness {
+    background-color: white;
+}
+
+.person {
+    border: 10px solid transparent;
+    margin-bottom: 25px;
+    width: 80%;
+    height: 80%;
+    opacity: 0.7;
+}
+
+    .person:hover {
+        border-color: #f1f1f1;
     }
 
-    a:hover {
-        background-color: #c7d1d6;
+.carousel-inner img {
+    -webkit-filter: grayscale(90%);
+    filter: grayscale(90%); /* make all photos black and white */
+    width: 100%; /* Set width to 100% */
+    margin: auto;
+}
+
+.carousel-caption h3 {
+    color: #fff !important;
+}
+
+@media (max-width: 600px) {
+    .carousel-caption {
+        display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
     }
-
-header, footer, hgroup,
-nav, section {
-    display: block;
 }
 
-mark {
-    background-color: #a6dbed;
-    padding-left: 5px;
-    padding-right: 5px;
+.bg-1 {
+    background: #2d2d30;
+    color: #bdbdbd;
 }
 
-.float-left {
-    float: left;
-}
-
-.float-right {
-    float: right;
-}
-
-.clear-fix:after {
-    content: ".";
-    clear: both;
-    display: block;
-    height: 0;
-    visibility: hidden;
-}
-
-h1, h2, h3,
-h4, h5, h6 {
-    color: #efeeef;
-    margin-bottom: 0;
-    padding-bottom: 0;
-}
-
-h1 {
-    font-size: 2em;
-}
-
-h2 {
-    font-size: 1.75em;
-}
-
-h3 {
-    font-size: 1.2em;
-}
-
-h4 {
-    font-size: 1.1em;
-}
-
-h5, h6 {
-    font-size: 1em;
-}
-
-    h5 a:link, h5 a:visited, h5 a:active {
-        padding: 0;
-        text-decoration: none;
-    }
-
-
-/* main layout
-----------------------------------------------------------*/
-.content-wrapper {
-    margin: 0 auto;
-    max-width: 80%;
-}
-
-#body {
-    background-color: #f8f8ff;
-    clear: both;
-    /*padding-bottom: 5%;*/
-    height:85%;
-}
-
-.main-content {
-    padding-left: 10px;
-    padding-top: 30px;
-}
-
-.featured + .main-content {
-    background: url("../Images/heroAccent.png") no-repeat;
-}
-
-header .content-wrapper {
-    padding-top: 20px;
-}
-
-footer {
-    clear: both;
-    /*background-color: #e2e2e2;*/
-    font-size: 1.2em;
-    /*height: 100px;*/
-    color:black;
-}
-
-
-/* site title
-----------------------------------------------------------*/
-.site-title {
-    color: #c8c8c8;
-    font-family: Rockwell, Consolas, "Courier New", Courier, monospace;
-    font-size: 2.3em;
-    margin: 0;
-}
-
-    .site-title a, .site-title a:hover, .site-title a:active {
-        background: none;
-        color: #c8c8c8;
-        outline: none;
-        text-decoration: none;
-    }
-
-
-/* login
-----------------------------------------------------------*/
-#login {
-    display: block;
-    font-size: .85em;
-    margin: 0 0 10px;
-    text-align: right;
-}
-
-    #login a {
-        background-color: #d3dce0;
-        margin-left: 10px;
-        margin-right: 3px;
-        padding: 2px 3px;
-        text-decoration: none;
-    }
-
-        #login a.username {
-            background: none;
-            margin: 0;
-            padding: 0;
-            text-decoration: underline;
-        }
-
-    #login ul {
-        margin: 0;
-    }
-
-    #login li {
-        display: inline;
-        list-style: none;
-    }
-
-
-/* menu
-----------------------------------------------------------*/
-ul#menu {
-    font-size: 1.3em;
-    font-weight: 600;
-    margin: 0 0 5px;
-    padding: 0;
-    text-align: right;
-}
-
-    ul#menu li {
-        display: inline;
-        list-style: none;
-        padding-left: 15px;
-    }
-
-        ul#menu li a {
-            background: none;
-            color: #999;
-            text-decoration: none;
-        }
-
-            ul#menu li a:hover {
-                color: #333;
-                text-decoration: none;
-            }
-
-
-/* page elements
-----------------------------------------------------------*/
-/* featured */
-.featured {
-    background-color: #fff;
-}
-
-    .featured .content-wrapper {
-        background-color: #7ac0da;
-        background-image: -ms-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        background-image: -o-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #7ac0da), color-stop(1, #a4d4e6));
-        background-image: -webkit-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        background-image: linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        color: #3e5667;
-        padding: 20px 40px 30px 40px;
-    }
-
-    .featured hgroup.title h1, .featured hgroup.title h2 {
+    .bg-1 h3 {
         color: #fff;
     }
 
-    .featured p {
-        font-size: 1.1em;
+    .bg-1 p {
+        font-style: italic;
     }
 
-/* page titles */
-hgroup.title {
-    margin-bottom: 10px;
+.list-group-item:first-child {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
 }
 
-    hgroup.title h1, hgroup.title h2 {
-        display: inline;
-    }
-
-    hgroup.title h2 {
-        font-weight: normal;
-        margin-left: 3px;
-    }
-
-/* features */
-section.feature {
-    width: 300px;
-    float: left;
-    padding: 10px;
+.list-group-item:last-child {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
 }
 
-/* ordered list */
-ol.round {
-    list-style-type: none;
-    padding-left: 0;
-}
-
-    ol.round li {
-        margin: 25px 0;
-        padding-left: 45px;
-    }
-
-        ol.round li.zero {
-            background: url("../Images/orderedList0.png") no-repeat;
-        }
-
-        ol.round li.one {
-            background: url("../Images/orderedList1.png") no-repeat;
-        }
-
-        ol.round li.two {
-            background: url("../Images/orderedList2.png") no-repeat;
-        }
-
-        ol.round li.three {
-            background: url("../Images/orderedList3.png") no-repeat;
-        }
-
-        ol.round li.four {
-            background: url("../Images/orderedList4.png") no-repeat;
-        }
-
-        ol.round li.five {
-            background: url("../Images/orderedList5.png") no-repeat;
-        }
-
-        ol.round li.six {
-            background: url("../Images/orderedList6.png") no-repeat;
-        }
-
-        ol.round li.seven {
-            background: url("../Images/orderedList7.png") no-repeat;
-        }
-
-        ol.round li.eight {
-            background: url("../Images/orderedList8.png") no-repeat;
-        }
-
-        ol.round li.nine {
-            background: url("../Images/orderedList9.png") no-repeat;
-        }
-
-/* content */
-article {
-    float: left;
-    width: 70%;
-}
-
-aside {
-    float: right;
-    width: 25%;
-}
-
-    aside ul {
-        list-style: none;
-        padding: 0;
-    }
-
-        aside ul li {
-            background: url("../Images/bullet.png") no-repeat 0 50%;
-            padding: 2px 0 2px 20px;
-        }
-
-.label {
-    font-weight: 400;
-}
-
-/* login page */
-#loginForm {
-    border-right: solid 2px #c8c8c8;
-    float: left;
-    width: 55%;
-}
-
-    #loginForm .validation-error {
-        display: block;
-        margin-left: 15px;
-    }
-
-    #loginForm .validation-summary-errors ul {
-        margin: 0;
-        padding: 0;
-    }
-
-    #loginForm .validation-summary-errors li {
-        display: inline;
-        list-style: none;
-        margin: 0;
-    }
-
-    #loginForm input {
-        width: 250px;
-    }
-
-        #loginForm input[type="checkbox"],
-        #loginForm input[type="submit"],
-        #loginForm input[type="button"],
-        #loginForm button {
-            width: auto;
-        }
-
-#socialLoginForm {
-    margin-left: 40px;
-    float: left;
-    width: 40%;
-}
-
-    #socialLoginForm h2 {
-        margin-bottom: 5px;
-    }
-
-#socialLoginList button {
-    margin-bottom: 12px;
-}
-
-#logoutForm {
-    display: inline;
-}
-
-/* contact */
-.contact h3 {
-    font-size: 1.2em;
-}
-
-.contact p {
-    margin: 5px 0 0 10px;
-}
-
-.contact iframe {
-    border: 1px solid #333;
-    margin: 5px 0 0 10px;
-}
-
-/* forms */
-fieldset {
+.thumbnail {
+    padding: 0 0 15px 0;
     border: none;
-    margin: 0;
-    padding: 0;
+    border-radius: 0;
 }
 
-    fieldset legend {
-        display: none;
+    .thumbnail p {
+        margin-top: 15px;
+        color: #555;
     }
 
-    fieldset ol {
-        padding: 0;
-        list-style: none;
+h1 h2 h3 h4 h5 h6 {
+    color: #000;
+}
+
+.modal-header, h4, .close {
+    color: #131212 !important;
+    text-align: center;
+    font-size: 30px;
+}
+
+.modal-header, .modal-body {
+    padding: 40px 50px;
+}
+
+.nav-tabs li a {
+    color: #777;
+}
+
+#googleMap {
+    width: 100%;
+    height: 400px;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+}
+
+.navbar {
+    font-family: "My New Body Font", Arial, sans-serif;
+    margin-bottom: 0;
+    background-color: #368EE0;
+    border: 0;
+    font-size: 11px !important;
+    letter-spacing: 1px;
+    opacity: 0.9;
+}
+
+    .navbar li a, .navbar .navbar-brand {
+        color: #fff !important;
     }
 
-        fieldset ol li {
-            padding-bottom: 5px;
+.navbar-nav li a:hover {
+    color: #fff !important;
+}
+
+.navbar-nav li.active a {
+    color: #fff !important;
+    background-color: #4A99E3 !important;
+}
+
+.navbar-nav li a span {
+    color: rgba(245, 245, 8, 0.94) !important;
+}
+
+.navbar-default .navbar-toggle {
+    border-color: transparent;
+}
+
+.open .dropdown-toggle {
+    color: #fff;
+    background-color: #555 !important;
+}
+
+.dropdown-menu li a {
+    color: #000 !important;
+}
+
+    .dropdown-menu li a:hover {
+        background-color: red !important;
+    }
+
+footer {
+    background-color: #4A99E3;
+    color: #f5f5f5;
+}
+
+    footer a {
+        color: #f5f5f5;
+    }
+
+        footer a:hover {
+            color: #777;
+            text-decoration: none;
         }
 
-label {
-    display: block;
-    /*font-size: 1.2em;*/
-    font-weight: 400;
-}
-
-    label.checkbox {
-        display: inline;
-    }
-
-input, textarea {
-    border: 1px solid #e2e2e2;
-    background: #fff;
-    color: #333;
-    font-size: 1.2em;
-    margin: 5px 0 6px 0;
-    padding: 10px;
-    /*width: 300px;*/
+.form-control {
+    border-radius: 0;
 }
 
 textarea {
-    font-family: inherit;
-    width: 500px;
+    resize: none;
 }
 
-
-
-    input:focus, textarea:focus {
-        border: 1px solid #7ac0da;
-    }
-
-input[type="checkbox"] {
-    background: transparent;
-    border: inherit;
-    width: auto;
+.container-fluid h3 {
+    font-family: 'Lobster', Georgia, Times, serif;
 }
 
-input[type="submit"],
-input[type="button"],
-button {
-    background-color: #368ee0;
-    border: 1px solid #787878;
-    cursor: pointer;
-    /*font-size: 1.2em;*/
-    font-weight: 600;
-    margin-right: 8px;
-    width: 10%;
+.userrpeort {
+    color: black;
 }
 
-td input[type="submit"],
-td input[type="button"],
-td button {
-    font-size: 1em;
-    padding: 4px;
-    margin-right: 4px;
-}
-
-/* info and errors */
-.message-info {
-    border: 1px solid;
-    clear: both;
-    padding: 10px 20px;
-}
-
-.message-error {
-    clear: both;
-    color: #e80c4d;
-    font-size: 1.1em;
-    font-weight: bold;
-    margin: 20px 0 10px 0;
-}
-
-.message-success {
-    color: #7ac0da;
-    font-size: 1.3em;
-    font-weight: bold;
-    margin: 20px 0 10px 0;
-}
-
-.error {
-    color: #e80c4d;
-}
-
-/* styles for validation helpers */
-.field-validation-error {
-    color: #e80c4d;
-    font-weight: bold;
-}
-
-.field-validation-valid {
-    display: none;
-}
-
-input.input-validation-error {
-    border: 1px solid #e80c4d;
-}
-
-input[type="checkbox"].input-validation-error {
-    border: 0 none;
-}
-
-.validation-summary-errors {
-    color: #e80c4d;
-    font-weight: bold;
-    font-size: 1.1em;
-}
-
-.validation-summary-valid {
-    display: none;
-}
-
-
-/* tables
-----------------------------------------------------------*/
-table {
-    border-collapse: collapse;
-    border-spacing: 0;   
-    border: 0 none;
-}
-
-th {  
-    text-align: left;
-    border: none 0px;
-    padding-left: 0;
-}
-
-    th a {
-        display: block;
-        position: relative;
-    }
-
-        th a:link, th a:visited, th a:active, th a:hover {
-            color: #333;
-            font-weight: 600;
-            text-decoration: none;
-            padding: 0;
-        }
-
-        th a:hover {
-            color: #000;
-        }
-
-    th.asc a, th.desc a {
-        margin-right: .75em;
-    }
-
-        th.asc a:after, th.desc a:after {
-            display: block;
-            position: absolute;
-            right: 0em;
-            top: 0;
-            font-size: 0.75em;
-        }
-
-        th.asc a:after {
-            content: '▲';
-        }
-
-        th.desc a:after {
-            content: '▼';
-        }
-
-td {
-    padding: 0.25em 2em 0.25em 0em;
-    border: 0 none;
-}
-
-tr.pager td {
-    padding: 0 0.25em 0 0;
-}
-
-#navigation {
-    background: #368ee0;
-    position: relative;
-    z-index: 100;
-}
-
-    #navigation #brand {
-        float: left;
-        color: #fff;
-        font-size: 20px;
-        margin-top: 9px;
-        padding-right: 69px;
-        padding-left: 200px;
-        padding-bottom: 2px;
-        line-height: 44px;
-        background: url("../Images/Medusind.png") no-repeat;
-    }
-
-.clear {
-    clear: both;
-    height: 10px;
-    line-height: 0px;
-    font-size: 0%;
-    padding: 0;
-    margin: 0;
-}
-
-.Userdropdown {
-    padding: 10px 10px 10px 10px;
-}
-
-#usernamestyle {
-    color: yellow;
-}
-
-#hometab {
-    padding: 15px 0 0 0 !important;
-}
-
-
-/********************
-*   Mobile Styles   *
-********************/
-@media only screen and (max-width: 850px) {
-
-    /* header
-    ----------------------------------------------------------*/
-    header .float-left,
-    header .float-right {
-        float: none;
-    }
-
-    /* logo */
-    header .site-title {
-        margin: 10px;
-        text-align: center;
-    }
-
-    /* login */
-    #login {
-        font-size: .85em;
-        margin: 0 0 12px;
-        text-align: center;
-    }
-
-        #login ul {
-            margin: 5px 0;
-            padding: 0;
-        }
-
-        #login li {
-            display: inline;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        #login a {
-            background: none;
-            color: #999;
-            font-weight: 600;
-            margin: 2px;
-            padding: 0;
-        }
-
-            #login a:hover {
-                color: #efeeef;
-            }
-
-    /* menu */
-    nav {
-        margin-bottom: 5px;
-    }
-
-    ul#menu {
-        margin: 0;
-        padding: 0;
-        text-align: center;
-    }
-
-        ul#menu li {
-            margin: 0;
-            padding: 0;
-        }
-
-
-    /* main layout
-    ----------------------------------------------------------*/
-    .main-content,
-    .featured + .main-content {
-        background-position: 10px 0;
-    }
-
-    .content-wrapper {
-        padding-right: 10px;
-        padding-left: 10px;
-    }
-
-    .featured .content-wrapper {
-        padding: 10px;
-    }
-
-    /* page content */
-    article, aside {
-        float: none;
-        width: 100%;
-    }
-
-    /* ordered list */
-    ol.round {
-        list-style-type: none;
-        padding-left: 0;
-    }
-
-        ol.round li {
-            padding-left: 10px;
-            margin: 25px 0;
-        }
-
-            ol.round li.zero,
-            ol.round li.one,
-            ol.round li.two,
-            ol.round li.three,
-            ol.round li.four,
-            ol.round li.five,
-            ol.round li.six,
-            ol.round li.seven,
-            ol.round li.eight,
-            ol.round li.nine {
-                background: none;
-            }
-
-    /* features */
-    section.feature {
-        float: none;
-        padding: 10px;
-        width: auto;
-    }
-
-        section.feature img {
-            color: #999;
-            content: attr(alt);
-            font-size: 1.5em;
-            font-weight: 600;
-        }
-
-    /* forms */
-    input {
-        width: 90%;
-    }
-
-    /* login page */
-    #loginForm {
-        border-right: none;
-        float: none;
-        width: auto;
-    }
-
-        #loginForm .validation-error {
-            display: block;
-            margin-left: 15px;
-        }
-
-    #socialLoginForm {
-        margin-left: 0;
-        float: none;
-        width: auto;
-    }
-
-
-    /* footer
-    ----------------------------------------------------------*/
-    footer .float-left,
-    footer .float-right {
-        float: none;
-    }
-
-    footer {
-        text-align: center;
-        height: auto;
-        padding: 10px 0;
-    }
-
-        footer p {
-            margin: 0;
-        }
+#myNavbar ul {
+    margin-right: 1px !important;
 }
